<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_margin="@dimen/margin_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_logo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/toolbarTitle"
                style="@style/BoldTitleStyle"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_8"
                android:text="@string/label_my_history" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/monthSpinner"
        style="@style/DropDownItem"
        android:layout_width="0dp"
        android:text="@string/label_month"
        app:layout_constraintEnd_toStartOf="@+id/categoriesSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/categoriesSpinner"
        style="@style/DropDownItem"
        android:layout_width="0dp"
        app:autoSizeMaxTextSize="@dimen/text_large_18"
        app:autoSizeMinTextSize="@dimen/text_tiny_10"
        app:autoSizeTextType="uniform"
        android:text="@string/label_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monthSpinner"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerHistory"
        android:layout_margin="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthSpinner" />

</android.support.constraint.ConstraintLayout>