<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/BoldTitleStyle"
                android:layout_margin="@dimen/margin_8"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/imgLogo"
                app:layout_constraintStart_toEndOf="@id/imgLogo"
                app:layout_constraintTop_toTopOf="@+id/imgLogo" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_bell_icon" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/imgNotification"
                app:layout_constraintTop_toTopOf="@id/imgNotification"
                app:srcCompat="@drawable/badge" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_8"
                android:text="02"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_tiny_8"
                app:layout_constraintBottom_toBottomOf="@id/imgBadge"
                app:layout_constraintEnd_toEndOf="@id/imgBadge"
                app:layout_constraintStart_toStartOf="@id/imgBadge"
                app:layout_constraintTop_toTopOf="@id/imgBadge" />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtMyBankAccounts"
                style="@style/BoldSubTitleStyle"
                android:text="@string/title_my_bank_accounts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerBankAccounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/cardReceiveMoney"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMyBankAccounts" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardSendMoney"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_16"
                app:cardCornerRadius="@dimen/margin_16"
                app:layout_constraintEnd_toStartOf="@+id/cardReceiveMoney"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerBankAccounts">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgSendMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:background="@drawable/send_money_icon"
                        android:padding="@dimen/margin_8"
                        app:srcCompat="@drawable/ic_arrow_forward" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:padding="@dimen/margin_8"
                        android:text="@string/msg_send_money"
                        android:textColor="@color/colorSecondary" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardReceiveMoney"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_16"
                app:cardCornerRadius="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/cardSendMoney"
                app:layout_constraintTop_toBottomOf="@id/recyclerBankAccounts">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgReceiveMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:background="@drawable/receive_money_icon"
                        android:padding="@dimen/margin_8"
                        app:srcCompat="@drawable/ic_arrow_back" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:padding="@dimen/margin_8"
                        android:text="@string/msg_receive_money"
                        android:textColor="@color/colorSecondary" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtSendMoneyTo"
                style="@style/BoldSubTitleStyle"
                android:layout_marginTop="@dimen/margin_22"
                android:text="@string/label_send_money_to"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardSendMoney" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtSendMoneyToViewAll"
                style="@style/BoldSubTitleStyle"
                android:layout_margin="@dimen/margin_8"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/label_view_all"
                android:textSize="@dimen/text_small_14"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtSendMoneyTo"
                app:layout_constraintEnd_toEndOf="@id/cardReceiveMoney" />

            <android.support.v7.widget.CardView
                android:id="@+id/linearSendMoneyTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                app:cardCornerRadius="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSendMoneyTo">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <GRIP.payment.customview.DashboardContactItem
                        android:id="@+id/imgAddContact"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        app:contactImage="@drawable/ic_add_circle"
                        app:contactName="Add New"
                        app:hasBackgroundRing="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/contactItem1"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <GRIP.payment.customview.DashboardContactItem
                        android:id="@+id/contactItem1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        app:contactImage="@drawable/ic_avatar"
                        app:contactName="Alice"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/contactItem2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/imgAddContact"
                        app:layout_constraintTop_toTopOf="parent" />

                    <GRIP.payment.customview.DashboardContactItem
                        android:id="@+id/contactItem2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        app:contactImage="@drawable/ic_avatar"
                        app:contactName="Bob"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/contactItem3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/contactItem1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <GRIP.payment.customview.DashboardContactItem
                        android:id="@+id/contactItem3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        app:contactImage="@drawable/ic_avatar"
                        app:contactName="Emily"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imgViewMore"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/contactItem2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgViewMore"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/contactItem3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_keyboard_arrow_right" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtUtilities"
                style="@style/BoldSubTitleStyle"
                android:layout_marginTop="@dimen/margin_22"
                android:text="@string/label_utilities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearSendMoneyTo" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                app:cardCornerRadius="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtUtilities">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_rect"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtMobileUtility"
                        style="@style/AppTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_utility_phone"
                        android:text="@string/label_mobile" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtElectricityUtility"
                        style="@style/AppTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_utility_electricity"
                        android:text="@string/label_electricity" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtBroadbandUtility"
                        style="@style/AppTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:drawableTop="@drawable/ic_utility_broadband"
                        android:text="@string/label_broadband" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtGasUtility"
                        style="@style/AppTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_utility_gas"
                        android:text="@string/label_gas" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>